kubernetes/frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kuberbank-frontend-service
  namespace: kuberbank
  labels:
    app: kuberbank-frontend
    component: web
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
  selector:
    app: kuberbank-frontend
